fixed alignment and spacing in the header

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
 }
 
 .logo {
@@ -14,6 +18,12 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 12px;
+  width: fit-content;
+  height: fit-content;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -22,4 +32,6 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  box-sizing: border-box;
+  display: inline-block;
 }
